--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 .scroll-down{
     width: 100%;
-    height: 1000px;
+    height: 800px;
     background-color: silver;
     display: flex;
     justify-content: center;
@@ -15,22 +15,32 @@
 
 .slide-left{
     width: 100%;
-    height: 1000px;
-    background-color: rgb(177, 62, 62);
+    height: 600px;
+    background-color: rgb(189, 178, 178);
     display: flex;
     font-size: 26px;
     justify-content: space-around;
     padding-top: 150px; 
 }
 
+.slide1{
+    height: 30px;
+    width: 200px;
+    border-bottom: 3px solid red;
+}
+
 .slide-left>img{
     width: 250px;
     height: 250px;
-    margin-top: 500px;
+    margin-top: 200px;
 }
 
 .scroll-up{
     width: 100%;
-    height: 1000px;
-    background-color: rgb(41, 9, 9);
+    height: 600px;
+    background-color: silver;
+    display: flex;
+    font-size: 72px;
+    justify-content: center;
+    align-items: center;
 }
